test/invalid/class_unfinished.d
//T error: class_unfinished.d:5:0:
//T error: expected 'CloseBrace', got 'End'.

class C {
